--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dist"
   ],
   "scripts": {
-    "test": "tsc --noEmit",
+    "test": "ts-node src/test.ts && tsc --noEmit",
     "clean": "rimraf dist",
     "build": "npm run build:server && npm run build:client",
     "build:server": "rimraf dist && tsc -p . && rimraf dist/tsconfig.tsbuildinfo",
