--- a/package.json
+++ b/package.json
@@ -3,7 +3,21 @@
   "version": "0.0.0",
   "type": "commonjs",
   "description": "A Node.js library for running MediaPipe models that are typically browser-only. This package uses a local Express (web) server and Playwright (headless browser) to bridge the gap between Node.js and MediaPipe's browser-based APIs.",
-  "keywords": [],
+  "keywords": [
+    "mediapipe",
+    "face-detection",
+    "face-landmarks",
+    "computer-vision",
+    "machine-learning",
+    "ai",
+    "playwright",
+    "express",
+    "nodejs",
+    "typescript",
+    "headless-browser",
+    "facial-recognition",
+    "landmark-detection"
+  ],
   "author": "Beeno Tung <aabbcc1241@yahoo.com.hk> (https://beeno-tung.surge.sh)",
   "license": "BSD-2-Clause",
   "repository": {
