docs: refine npm keywords

--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "mediapipe",
     "face-detection",
     "face-landmarks",
+    "facial-landmarks",
     "computer-vision",
     "machine-learning",
     "ai",
+    "image-processing",
     "playwright",
     "express",
     "nodejs",
     "typescript",
     "headless-browser",
     "facial-recognition",
-    "landmark-detection"
+    "face-analysis",
+    "automation"
   ],
   "author": "Beeno Tung <aabbcc1241@yahoo.com.hk> (https://beeno-tung.surge.sh)",
   "license": "BSD-2-Clause",
